make important changes

--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -6,19 +6,19 @@ import  Navitem from "../shared/Navitem.astro";
 const navItems = [
     {
         href:"#",
-        text:"Home"
+        text:"Inicio"
     },
     {
-        href:"#services",
-        text:"Services"
+        href:"#mitos",
+        text:"Mitos"
     },
     {
-        href:"#about-us",
-        text:"About us"
+        href:"#health",
+        text:"Salud"
     },
     {
-        href:"#features",
-        text:"Features"
+        href:"#recurses",
+        text:"Recursos"
     },
 ]
 ---
@@ -51,7 +51,9 @@ const navItems = [
                 </ul>
 
                 <div class="lg:min-w-max flex items-center sm:w-max w-full pb-6 lg:pb-0 border-b border-box-bg lg:border-0 px-6 lg:px-0">
+                    <!-- 
                     <BtnLink text="Get Started" href="#cta" className="flex justify-center w-full sm:w-max" variant="primary"/>
+                    -->
                 </div>
             </div>
 
