--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -177,10 +177,10 @@ const footerLegal = [
         <Container>
             <div class="flex justify-between items-center gap-6 md:text-lg text-heading-3">
                 <div>
-                    &copy; <span id="year"></span> Sin Mayores Etiqutas. Todos los derechos reservados
+                    &copy; <span id="year"></span> Sin Mayores Etiquetas. Todos los derechos reservados
                 </div>
                 <div>
-                    Proudly made by <a href="https://github.com/johnkat-mj" target="_blank" class="font-semibold">Alexis Flores</a>
+                    Hecho por <a href="https://github.com/johnkat-mj" target="_blank" class="font-semibold">Alexis Flores</a>
                 </div>
             </div>
         </Container>
