--- a/src/components/sections/Mental.astro
+++ b/src/components/sections/Mental.astro
@@ -6,7 +6,7 @@ import Title from "../shared/Title.astro";
 
 ---
 
-<section id="health">
+<section>
     <Container className="flex flex-col midmd:flex-row gap-10 lg:gap-12">
         <div class="max-w-md mx-auto midmd:max-w-none lg:mx-0  lg:pr-10 xl:pr-2 flex-1 flex w-11/12 midmd:w-5/12 lg:w-1/2 midmd:h-auto">
             <div class="w-full h-80 sm:h-96 midmd:h-full relative">
@@ -14,14 +14,14 @@ import Title from "../shared/Title.astro";
                 <div class="absolute  p-1 -top-4 md:-top-10 right-0 w-20 h-20 bg-gradient-to-br from-primary to-orange-400 rounded-full blur-3xl opacity-60"></div>
                 
                 <span class="absolute w-full aspect-[16/5] -skew-x-12 rounded-full bg-gradient-to-tr from-primary to-green-400 opacity-40 blur-2xl left-0 bottom-0"></span>
-                <img src={"/images/dance.jpg"} alt="banner image" 
+                <img src={"/images/mental.webp"} alt="banner image" 
                 width="1240" height="1385"
                 class=" w-auto left-1/2 -translate-x-1/2 absolute bottom-0 max-h-full" />
             </div>
         </div>
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
             <Title>
-                Impacto en la Salud Física
+                Impacto en la Salud Mental y Emocional
             </Title>
             <!-- 
             <Paragraph className="mt-8">
@@ -29,11 +29,11 @@ import Title from "../shared/Title.astro";
             </Paragraph>
             -->
             <div class="pt-8 grid grid-cols-2 items-center gap-4 max-w-3xl md:max-w-[none]">
-                <Info description="Peor acceso y calidad de la atención médica" title="">
+                <Info description="Baja autoestima y autopercepción negativa" title="">
                 </Info>
-                <Info description="Menor participación en actividades físicas" title="">
+                <Info description="Aumento de la depresión y ansiedad" title="">
                 </Info>
-                <Info description="Mayor riesgo de enfermedades crónicas" title="">
+                <Info description="Efecto en la memoria y funciones cognitivas" title="">
                 </Info>
             </div>
         </div>
