--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -9,27 +9,23 @@ import { services } from "../../utils/data.ts";
 type ServicesProps = {
     title: string;
     description: string;
-    icon: string
 };
 
 
 ---
 
-<section id="services">
+<section id="mitos">
     <Container className="space-y-10 md:sapce-y-12">
         <div class="text-center max-w-3xl mx-auto space-y-4">
             <Title>
-                What we offer
+                Algunos mitos
             </Title>
-            <Paragraph>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </Paragraph>
         </div>
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
             {
                     services.map((service: ServicesProps) => {
                     return (
-                            <Service title={service.title} description={service.description} icon={service.icon}>
+                            <Service title={service.title} description={service.description}>
                             </Service>
                             );
                     })
