--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,14 +6,17 @@ import AboutUs from '../components/sections/AboutUs.astro';
 import Features from '../components/sections/Features.astro';
 import CTA from '../components/sections/CTA.astro';
 import Brands from '../components/sections/Brands.astro';
+import Mental from '../components/sections/Mental.astro';
+import Impact from '../components/sections/Impact.astro';
 ---
 
 <Layout title="Sin Mayores Etiquetas">
 	<main class="flex flex-col gap-y-20 md:gap-y-32 overflow-hidden">
 		<Hero/>
-		<Brands/>
 		<Services/>
 		<AboutUs/>
+		<Mental />
+		<Impact />
 		<Features/>
 		<CTA/>
 	</main>
