add info about edadismo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import CTA from '../components/sections/CTA.astro';
 import Brands from '../components/sections/Brands.astro';
 import Mental from '../components/sections/Mental.astro';
 import Impact from '../components/sections/Impact.astro';
+import Edadismo from '../components/sections/Edadismo.astro';
 ---
 
 <Layout title="Sin Mayores Etiquetas">
@@ -19,5 +20,6 @@ import Impact from '../components/sections/Impact.astro';
 		<Impact />
 		<Features/>
 		<CTA/>
+		<Edadismo />
 	</main>
 </Layout>
