--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -20,6 +20,10 @@ const navItems = [
         href:"#recurses",
         text:"Recursos"
     },
+    {
+        href:"#edadismo",
+        text:"Edadismo"
+    },
 ]
 ---
 
