--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -24,6 +24,10 @@ const navItems = [
         href:"#edadismo",
         text:"Edadismo"
     },
+    {
+        href:"#reflex",
+        text:"Reflexiones"
+    },
 ]
 ---
 
