--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Brands from '../components/sections/Brands.astro';
 import Mental from '../components/sections/Mental.astro';
 import Impact from '../components/sections/Impact.astro';
 import Edadismo from '../components/sections/Edadismo.astro';
+import Reflex from '../components/sections/Reflex.astro';
 ---
 
 <Layout title="Sin Mayores Etiquetas">
@@ -21,5 +22,6 @@ import Edadismo from '../components/sections/Edadismo.astro';
 		<Features/>
 		<CTA/>
 		<Edadismo />
+		<Reflex />
 	</main>
 </Layout>
