--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -3,6 +3,9 @@ import GroupFooterNav from "../blocks/GroupFooterNav.astro";
 import Container from "../shared/Container.astro";
 import FooterNav from "../shared/FooterNav.astro";
 import Paragraph from "../shared/Paragraph.astro";
+
+const date = new Date();
+
 const footerNav1 = [
     {
         itemText:"Marketing",
@@ -125,11 +128,11 @@ const footerLegal = [
                         </div>
                     </a>
                     <Paragraph className={"mt-8"}>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, maiores nam doloribus id magni
+                        Juntos, podemos derribar los estereotipos y construir un futuro sin barreras de edad.
                     </Paragraph>
                 </div>
 
-                <!-- social links -->
+                <!-- social links 
                 <div class="min-h-max flex items-center gap-4 text-heading-3 mt-8">
                     <a href="#" class="transition hover:text-heading-1 hover:scale-105">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
@@ -159,8 +162,10 @@ const footerLegal = [
                         <span class="sr-only">social link</span>
                     </a>
                 </div>
+                -->
             </div>
 
+            <!--
             <GroupFooterNav>
                 <FooterNav title={"Company"} navItems={footerCompany}/>
                 <FooterNav title={"Solutions"} navItems={footerNav1}/>
@@ -170,6 +175,7 @@ const footerLegal = [
                 <FooterNav title={"Support"} navItems={footerSupport}/>
                 <FooterNav title={"Ressources"} navItems={footerLegal}/>
             </GroupFooterNav>
+            -->
 
         </div>
     </Container>
@@ -177,7 +183,7 @@ const footerLegal = [
         <Container>
             <div class="flex justify-between items-center gap-6 md:text-lg text-heading-3">
                 <div>
-                    &copy; <span id="year"></span> Sin Mayores Etiquetas. Todos los derechos reservados
+                    &copy; <span id="year">{date.getFullYear()}.</span> Sin Mayores Etiquetas. Todos los derechos reservados
                 </div>
                 <div>
                     Hecho por <a href="https://github.com/johnkat-mj" target="_blank" class="font-semibold">Alexis Flores</a>
