add advice call out

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Mental from '../components/sections/Mental.astro';
 import Impact from '../components/sections/Impact.astro';
 import Edadismo from '../components/sections/Edadismo.astro';
 import Reflex from '../components/sections/Reflex.astro';
+import Advice from '../components/sections/Advice.astro';
 ---
 
 <Layout title="Sin Mayores Etiquetas">
@@ -23,5 +24,6 @@ import Reflex from '../components/sections/Reflex.astro';
 		<CTA/>
 		<Edadismo />
 		<Reflex />
+		<Advice />	
 	</main>
 </Layout>
