add models section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Impact from '../components/sections/Impact.astro';
 import Edadismo from '../components/sections/Edadismo.astro';
 import Reflex from '../components/sections/Reflex.astro';
 import Advice from '../components/sections/Advice.astro';
+import Model from '../components/sections/Model.astro';
 ---
 
 <Layout title="Sin Mayores Etiquetas">
@@ -25,5 +26,6 @@ import Advice from '../components/sections/Advice.astro';
 		<Edadismo />
 		<Reflex />
 		<Advice />	
+		<Model />
 	</main>
 </Layout>
