--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -185,9 +185,9 @@ const footerLegal = [
                 <div>
                     &copy; <span id="year">{date.getFullYear()}.</span> Sin Mayores Etiquetas. Todos los derechos reservados
                 </div>
-                <div>
-                    Hecho por <a href="https://github.com/johnkat-mj" target="_blank" class="font-semibold">Alexis Flores</a>
-                </div>
+                <!-- <div> -->
+                <!--     Hecho por <a href="https://github.com/johnkat-mj" target="_blank" class="font-semibold">Alexis Flores</a> -->
+                <!-- </div> -->
             </div>
         </Container>
     </div>
